--- a/ca/openssl.example.cnf
+++ b/ca/openssl.example.cnf
@@ -45,10 +45,10 @@ crl_dir         = $dir              # Where the issued crl are kept
 database        = $dir/index.txt    # database index file.
 new_certs_dir   = $dir              # default place for new certs.
 
-certificate     = $dir/ca.crt       # The CA certificate
+certificate     = ca.crt            # The CA certificate
 serial          = $dir/serial       # The current serial number
 crl             = $dir/crl.pem      # The current CRL
-private_key     = $dir/ca.key       # The private key
+private_key     = ca.key            # The private key
 RANDFILE        = $dir/.rand        # private random number file
 
 x509_extensions = usr_cert          # The extentions to add to the cert
